rename buff stuff for consistency

--- a/src/index.html
+++ b/src/index.html
@@ -6207,13 +6207,13 @@
                                     <input
                                             class="input-checkbox"
                                             type="checkbox"
-                                            id="go-checkbox-condition-vulnerability"
+                                            id="go-checkbox-buff-vulnerability"
                                             data-go-modifier='{"multiplier": {"Effective Power" : 0.25, "Effective Condition Damage": 0.25}}'
                                             checked
                                     />
                                     <label
                                             class="input-label"
-                                            for="go-checkbox-condition-vulnerability"
+                                            for="go-checkbox-buff-vulnerability"
                                     >
                                       <span
                                               class="icon icon-vulnerability"
@@ -6430,12 +6430,12 @@
                                     <input
                                             class="input-checkbox"
                                             type="checkbox"
-                                            id="go-checkbox-guardian-x2"
+                                            id="go-checkbox-buff-guardian-x2"
                                             data-go-modifier='{"multiplier": {"Effective Health": 0.12}}'
                                     />
                                     <label
                                             class="input-label"
-                                            for="go-checkbox-guardian-x2"
+                                            for="go-checkbox-buff-guardian-x2"
                                     >
                                       <span
                                               data-armory-size="24"
@@ -6449,12 +6449,12 @@
                                     <input
                                             class="input-checkbox"
                                             type="checkbox"
-                                            id="go-checkbox-guardian-x3"
+                                            id="go-checkbox-buff-guardian-x3"
                                             data-go-modifier='{"buff": {"Boon Duration": 10}}'
                                     />
                                     <label
                                             class="input-label"
-                                            for="go-checkbox-guardian-x3"
+                                            for="go-checkbox-buff-guardian-x3"
                                     >
                                       <span
                                               data-armory-size="24"
@@ -6468,12 +6468,12 @@
                                     <input
                                             class="input-checkbox"
                                             type="checkbox"
-                                            id="go-checkbox-guardian-x4"
+                                            id="go-checkbox-buff-guardian-x4"
                                             data-go-modifier='{"buff": {"Condition Damage": 216}}'
                                     />
                                     <label
                                             class="input-label"
-                                            for="go-checkbox-guardian-x4"
+                                            for="go-checkbox-buff-guardian-x4"
                                     >
                                       <span
                                               data-armory-size="24"
@@ -7114,7 +7114,7 @@
                             <div class="card-body p-0">
                               <div
                                       class="dropdown dropdown-select"
-                                      id="go-select-sigil-1"
+                                      id="go-select-sigils-1"
                               >
                                 <button
                                         class="btn dropdown-toggle"
@@ -7405,7 +7405,7 @@
                             <div class="card-body p-0">
                               <div
                                       class="dropdown dropdown-select"
-                                      id="go-select-sigil-2"
+                                      id="go-select-sigils-2"
                               >
                                 <button
                                         class="btn dropdown-toggle"
