add extra ids to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -276,7 +276,7 @@
                                     data-html="true"
                                     title="Select your skills and traits.<br>Conditional abilities (like signet passives or 'when endurance is not full') are calculated <strong>with 100% uptime</strong>, so only check them if the condition is permanently fulfilled."
                             ></span>
-                            <span class="font-italic text-lighter small">
+                            <span class="font-italic text-lighter small" id="insert-mesmer-preselect">
                               <span data-go-preselection="pchrono">pChrono</span>
                               |
                               <span data-go-preselection="staffmirage">Staff Mirage</span>
@@ -284,7 +284,7 @@
                           </div>
                           <div class="card-body">
                             <div class="container">
-                              <div class="row justify-content-start">
+                              <div class="row justify-content-start" id="insert-mesmer-data">
                                 <div
                                         class="col-12 col-md-6 col-lg-4 col-xl-3 mb-3"
                                 >
@@ -663,14 +663,14 @@
                                     data-html="true"
                                     title="Select your skills and traits.<br>Conditional abilities (like signet passives or 'when endurance is not full') are calculated <strong>with 100% uptime</strong>, so only check them if the condition is permanently fulfilled."
                             ></span>
-                            <span class="font-italic text-lighter small">
+                            <span class="font-italic text-lighter small" id="insert-warrior-preselect">
                               <span data-go-preselection="pbers">Power Banner Bers</span>
                               <span data-go-preselection="cbers">Condi Banner Bers</span>
                             </span>
                           </div>
                           <div class="card-body">
                             <div class="container">
-                              <div class="row justify-content-start">
+                              <div class="row justify-content-start" id="insert-warrior-data">
                                 <div
                                         class="col-12 col-md-6 col-lg-4 col-xl-3 mb-3"
                                 >
@@ -1595,7 +1595,7 @@
                                     data-html="true"
                                     title="Select your skills and traits.<br>Conditional abilities (like signet passives or 'when endurance is not full') are calculated <strong>with 100% uptime</strong>, so only check them if the condition is permanently fulfilled."
                             ></span>
-                            <span class="font-italic text-lighter small">
+                            <span class="font-italic text-lighter small" id="insert-guardian-preselect">
                               <span data-go-preselection="dh">DH</span>
                               |
                               <span data-go-preselection="pqfb">pQFB</span>
@@ -1607,7 +1607,7 @@
                           </div>
                           <div class="card-body">
                             <div class="container">
-                              <div class="row justify-content-start">
+                              <div class="row justify-content-start" id="insert-guardian-data">
                                 <div
                                         class="col-12 col-md-6 col-lg-4 col-xl-3 mb-3"
                                 >
@@ -2406,7 +2406,7 @@
                                     data-html="true"
                                     title="Select your skills and traits.<br>Conditional abilities (like signet passives or 'when endurance is not full') are calculated <strong>with 100% uptime</strong>, so only check them if the condition is permanently fulfilled."
                             ></span>
-                            <span class="font-italic text-lighter small">
+                            <span class="font-italic text-lighter small" id="insert-elementalist-preselect">
                               <span data-go-preselection="pwea">Power Weaver</span>
                               |
                               <span data-go-preselection="cwea">Condi Weaver</span>
@@ -2414,7 +2414,7 @@
                           </div>
                           <div class="card-body">
                             <div class="container">
-                              <div class="row justify-content-start">
+                              <div class="row justify-content-start" id="insert-elementalist-data">
                                 <div
                                         class="col-12 col-md-6 col-lg-4 col-xl-3 mb-3"
                                 >
@@ -3351,7 +3351,7 @@
                                     data-html="true"
                                     title="Select your skills and traits.<br>Conditional abilities (like signet passives or 'when endurance is not full') are calculated <strong>with 100% uptime</strong>, so only check them if the condition is permanently fulfilled."
                             ></span>
-                            <span class="font-italic text-lighter small">
+                            <span class="font-italic text-lighter small" id="insert-ranger-preselect">
                               <span data-go-preselection="pslb">Power Slb</span>
                               |
                               <span data-go-preselection="cslb">Condi Slb (D/T SB)</span>
@@ -3363,7 +3363,7 @@
                           </div>
                           <div class="card-body">
                             <div class="container">
-                              <div class="row justify-content-start">
+                              <div class="row justify-content-start" id="insert-ranger-data">
                                 <div
                                         class="col-12 col-md-6 col-lg-4 col-xl-3 mb-3"
                                 >
@@ -4064,7 +4064,7 @@
                                     data-html="true"
                                     title="Select your skills and traits.<br>Conditional abilities (like signet passives or 'when endurance is not full') are calculated <strong>with 100% uptime</strong>, so only check them if the condition is permanently fulfilled."
                             ></span>
-                            <span class="font-italic text-lighter small">
+                            <span class="font-italic text-lighter small" id="insert-revenant-preselect">
                               <span data-go-preselection="pren">Power Ren</span>
                               |
                               <span data-go-preselection="cren-deva">Condi Ren Devastation</span>
@@ -4072,7 +4072,7 @@
                           </div>
                           <div class="card-body">
                             <div class="container">
-                              <div class="row justify-content-start">
+                              <div class="row justify-content-start" id="insert-revenant-data">
                                 <div
                                         class="col-12 col-md-6 col-lg-4 col-xl-3 mb-3"
                                 >
@@ -4654,7 +4654,7 @@
                                     data-html="true"
                                     title="Select your skills and traits.<br>Conditional abilities (like signet passives or 'when endurance is not full') are calculated <strong>with 100% uptime</strong>, so only check them if the condition is permanently fulfilled."
                             ></span>
-                            <span class="font-italic text-lighter small">
+                            <span class="font-italic text-lighter small" id="insert-engineer-preselect">
                               <span data-go-preselection="pholo">Power Holo</span>
                               |
                               <span data-go-preselection="cholo">Condi Holo</span>
@@ -4664,7 +4664,7 @@
                           </div>
                           <div class="card-body">
                             <div class="container">
-                              <div class="row justify-content-start">
+                              <div class="row justify-content-start" id="insert-engineer-data">
                                 <div
                                         class="col-12 col-md-6 col-lg-4 col-xl-3 mb-3"
                                 >
@@ -6137,7 +6137,7 @@
                           <div class="card card-inverse" id="go-input-buffs">
                             <div class="card-header card-header-small">
                               Buffs
-                              <small class="font-italic text-lighter">
+                              <small class="font-italic text-lighter" id="insert-buff-preselect">
                                 <span data-go-buffs="none">None</span>
                                 |
                                 <span data-go-buffs="fractal">Fractal</span>
@@ -6148,7 +6148,7 @@
                               </small>
                             </div>
                             <div class="card-body container">
-                              <div class="row justify-content-start">
+                              <div class="row justify-content-start" id="insert-buff-data">
                                 <div
                                         class="col-12 col-md-6 col-lg-4 col-xl-3 mb-3"
                                 >
